[gd_scene load_steps=6 format=2]

[ext_resource path="res://Game/Interface/TipButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://Game/Interface/Interface.gd" type="Script" id=3]
[ext_resource path="res://Asset/Button/reset_button.png" type="Texture" id=8]
[ext_resource path="res://Asset/Button/back_button.png" type="Texture" id=10]
[ext_resource path="res://Asset/Button/menu_button.png" type="Texture" id=11]

[node name="Interface" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Left" type="VBoxContainer" parent="."]
margin_left = 30.0
margin_top = 40.0
margin_right = 80.0
margin_bottom = 140.0
rect_min_size = Vector2( 50, 100 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TipButton" parent="Left" instance=ExtResource( 2 )]
rect_min_size = Vector2( 50, 50 )

[node name="MenuButton" type="TextureButton" parent="Left"]
margin_top = 54.0
margin_right = 50.0
margin_bottom = 104.0
rect_min_size = Vector2( 50, 50 )
texture_normal = ExtResource( 11 )
expand = true
stretch_mode = 5

[node name="Right" type="VBoxContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -100.0
margin_top = 40.0
margin_right = -50.0
margin_bottom = 140.0
rect_min_size = Vector2( 50, 100 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResetButton" type="TextureButton" parent="Right"]
margin_right = 50.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )
texture_normal = ExtResource( 8 )
expand = true
stretch_mode = 5

[node name="StepBackButton" type="TextureButton" parent="Right"]
margin_top = 54.0
margin_right = 50.0
margin_bottom = 104.0
rect_min_size = Vector2( 50, 50 )
texture_normal = ExtResource( 10 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Left/MenuButton" to="." method="_on_menu_pressed"]
[connection signal="pressed" from="Right/ResetButton" to="." method="_on_reset_pressed"]
[connection signal="pressed" from="Right/StepBackButton" to="." method="_on_step_back_pressed"]
